# ak_selenium

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: ak_selenium.html  generate.bat  index.html  search.js
docs/ak_selenium/: browser.html  chrome.html  firefox.html  helium_attribs.html
src/ak_selenium/: __init__.py  browser.py  chrome.py  firefox.py  helium_attribs.py
src/tests/: test_browser.py  test_requests.py
