[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_selenium"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.10.0"
dependencies=[
    "selenium", 
    "webdriver-manager>=3.9.1", 
    "requests"
    ]

[project.optional-dependencies]
test = [
    "pytest",
    "ipykernel"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_selenium"
