[project]
name = "ak_selenium"
version = "0.0.1"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11.0"
dependencies=[
    "ak-requests",
    "helium >= 5.1.0",
]

[project.urls]
Home = "https://github.com/rpakishore/ak_selenium"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pdoc>=15.0.1",
    "ruff>=0.9.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
ak-requests = { git = "https://github.com/rpakishore/ak_requests" }

[tool.setuptools.dynamic]
description = {file = "README.md"}
